01-basic-k8s/05-autoscaling-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-apache
  labels:
    app: php-apache
spec:
  replicas: 2
  selector:
    matchLabels:
      run: php-apache
  template:
    metadata:
      labels:
        run: php-apache
    spec:
      containers:
      - name: php-apache
        image: k8s.gcr.io/hpa-example
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "100m"
            memory: "100Mi"
          requests:
            cpu: "100m"
            memory: "100Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: php-apache
  namespace: demok8s
  labels:
    run: php-apache
spec:
  type: NodePort
  selector:
    run: php-apache
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30081
