01-basic-k8s/08-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    app: mongo
  namespace: demok8s
# ในส่วนของ Deployment เราจะกำหนดให้มีชื่อว่า mongo-deployment และมี label เป็น app: mongo เพื่อให้เราสามารถเลือก Pod ที่ถูกสร้างขึ้นมาโดย Deployment นี้ได้ง่ายขึ้น และเราจะกำหนดให้ Deployment นี้อยู่ใน namespace ชื่อ demok8s เพื่อให้เราสามารถจัดการกับทรัพยากรที่เกี่ยวข้องกับ Deployment นี้ได้ง่ายขึ้น 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      name: mongo-pods
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          resources:
            limits:
              memory: "500Mi"
              cpu: "200m"
            requests:
              memory: "500Mi"
              cpu: "200m"
---
# ในส่วนของ Service เราจะกำหนดให้มีชื่อว่า mongo-service และมี label เป็น run: mongo เพื่อให้เราสามารถเลือก Pod ที่ถูกสร้างขึ้นมาโดย Deployment นี้ได้ง่ายขึ้น และเราจะกำหนดให้ Service นี้อยู่ใน namespace ชื่อ demok8s เพื่อให้เราสามารถจัดการกับทรัพยากรที่เกี่ยวข้องกับ Service นี้ได้ง่ายขึ้น และเราจะกำหนดให้ Service นี้เป็นแบบ ClusterIP เพื่อให้สามารถเข้าถึง Pod ที่ถูกสร้างขึ้นมาโดย Deployment นี้ได้จากภายใน cluster และเราจะกำหนดให้ Service นี้เลือก Pod ที่มี label เป็น app: mongo เพื่อให้สามารถเช [...]
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: demok8s
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
