01-basic-k8s/10-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client
  namespace: demok8s
# ในส่วนของ Deployment เราจะกำหนดให้มีชื่อว่า client-deployment และมี label เป็น app: client เพื่อให้เราสามารถเลือก Pod ที่ถูกสร้างขึ้นมาโดย Deployment นี้ได้ง่ายขึ้น และเราจะกำหนดให้ Deployment นี้อยู่ใน namespace ชื่อ demok8s เพื่อให้เราสามารถจัดการกับทรัพยากรที่เกี่ยวข้องกับ Deployment นี้ได้ง่ายขึ้น
spec:
  replicas: 3
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      name: client-pods
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: dekcode/todo-app:v4
          resources:
            limits:
              memory: "500Mi"
              cpu: "200m"
            requests:
              memory: "500Mi"
              cpu: "200m"
---
# ในส่วนของ Service เราจะกำหนดให้มีชื่อว่า client-service และมี label เป็น run: client เพื่อให้เราสามารถเลือก Pod ที่ถูกสร้างขึ้นมาโดย Deployment นี้ได้ง่ายขึ้น และเราจะกำหนดให้ Service นี้อยู่ใน namespace ชื่อ demok8s เพื่อให้เราสามารถจัดการกับทรัพยากรที่เกี่ยวข้องกับ Service นี้ได้ง่ายขึ้น และเราจะกำหนดให้ Service นี้เป็นแบบ ClusterIP เพื่อให้สามารถเข้าถึง Pod ที่ถูกสร้างขึ้นมาโดย Deployment นี้ได้จากภายใน cluster และเราจะกำหนดให้ Service นี้เลือก Pod ที่มี label เป็น app: client เพื่อให้สามาร [...]
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: demok8s
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - port: 80
      targetPort: 80
