01-basic-k8s/11-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: demok8s
# annotations เป็นส่วนที่ใช้ในการกำหนดค่าเพิ่มเติมสำหรับ Ingress โดยในที่นี้เราจะกำหนดให้ Ingress นี้ใช้ Ingress Controller ที่ชื่อว่า nginx และเราจะกำหนดให้ Ingress นี้สามารถใช้ regular expression ในการกำหนด path ได้
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"

# spec เป็นส่วนที่ใช้ในการกำหนดรายละเอียดของ Ingress โดยในที่นี้เราจะกำหนดให้ Ingress นี้ใช้ Ingress Controller ที่ชื่อว่า nginx และเราจะกำหนดให้ Ingress นี้มี rules ที่กำหนดให้เมื่อมีการเข้าถึง host ที่ชื่อว่า todo.site และ path ที่ขึ้นต้นด้วย /api/ จะถูกส่งต่อไปยัง Service ที่ชื่อว่า server-service และเมื่อมีการเข้าถึง host ที่ชื่อว่า todo.site และ path ที่ขึ้นต้นด้วย / จะถูกส่งต่อไปยัง Service ที่ชื่อว่า client-service โดยทั้งสอง Service นี้จะเปิด port 80 เพื่อให้สามารถเชื่อมต่อกับ API ที่ถูก [...]
spec:
  ingressClassName: nginx
  rules:
  - host: todo.site
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 80
